<resources>
    <string name="app_name">QUE HACEMOS CALI?</string>

    <string name="rumba">Rumba y Musica</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Salir</string>
    <string name="action_home">Home</string>
    <string name="action_search">Buscar</string>
    <string name="gastronomia">Gastronomia</string>
    <string name="arte">Arte y Cultura</string>
    <string name="deportes">Deportes</string>
    <string name="hoteleria">Hoteleria</string>
    <string name="entretenimiento">Entretenimiento</string>
    <string name="visita">De Visita</string>
    <string name="recomendados">Recomendados</string>
    <string name="no_items">No hay elementos</string>

    <string name="nota">Nota: Esta seccion esta pensada para que los usuarios nos recomienden los
                        sitios que no estan en la aplicacion.</string>
    <string name="nombre">Nombre del Lugar*:</string>
    <string name="direccion">Direccion*:</string>
    <string name="telefono">Telefono:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="recomendar">Recomendar</string>
    <string name="pico_placa">Pico y Placa</string>
    <string name="hoy">Hoy</string>
    <string name="particular">Vehiculos\nParticulares</string>
    <string name="hora_particular">7:00 - 10:00 am y\n5:00 - 8:00 pm</string>
    <string name="publico">Vehiculos\nPublicos</string>
    <string name="hora_publico">5:00 am - 10:00 pm</string>
    <string name="y">Y</string>
    <string name="jala">Jala Jala Club</string>
    <string name="jala_desc_ab">Por fin lo que Cali esperaba en el sector de menga una rumba realmente...</string>
    <string name="jala_desc">Por fin lo que Cali esperaba en el sector de menga una rumba realmente
        diferente jala jala club discoteca. Jala jala cuenta con unas instalaciones inigualables con
        la última tecnología en sonido y luces robóticas, 2 pantalla de video y el mejor show laser de
        colombia. Tarima exclusiva para que veas los mejores artistas en acción.</string>
    <string name="info_jala">INFO 6904481 - 6904482</string>
    <string name="direccion_jala">Dirección: Calle 10 A 36 A-154, Yumbo, Valle del Cauca</string>
</resources>
