<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="101"
        android:title="@string/action_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_menu_home"
        android:orderInCategory="80"
        android:title="@string/action_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="85"
        android:title="@string/action_search"
        app:showAsAction="always" />
</menu>
