<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeviceFragment">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:drawableLeft="@drawable/drink"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/rumba"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00C853"
        android:drawableLeft="@drawable/spoon"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/gastronomia"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFBA00"
        android:drawableLeft="@drawable/ic_launcher"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:text="@string/arte"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF6D00"
        android:drawableLeft="@drawable/dribbble"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/deportes"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BFA5"
        android:drawableLeft="@drawable/hotel"
        android:gravity="center_vertical"
        android:paddingLeft="27dp"
        android:text="@string/hoteleria"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D6E63"
        android:drawableLeft="@drawable/camera"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/entretenimiento"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF4081"
        android:drawableLeft="@drawable/de_visita"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/visita"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7C4DFF"
        android:drawableLeft="@drawable/recomendados"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/recomendados"
        android:textSize="25sp" />

</LinearLayout>