<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeviceFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/nota"
                android:textColor="#9F9F9F"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="#9F9F9F"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edtTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape"
                android:textColor="#9F9F9F" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textColor="#9F9F9F"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edtTxtDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape"
                android:textColor="#9F9F9F" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textColor="#9F9F9F"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edtTxtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape"
                android:textColor="#9F9F9F" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textColor="#9F9F9F"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edtTxtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape"
                android:textColor="#9F9F9F" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="#1D89E4"
                android:padding="10dp"
                android:text="@string/recomendar"
                android:textColor="#FFF" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>